# clockwork

./: Cargo.toml
chess_core/: Cargo.toml  build.rs
chess_core/src/: lib.rs  main.rs
chess_core/src/data/: magics.rs  mod.rs
chess_core/src/engine/: eval.rs  mod.rs  perft.rs  search.rs
chess_core/src/magic/: io.rs  magicgen.rs  mod.rs
chess_core/src/performance/: crosschecksf.rs  mod.rs  performance.rs
chess_core/src/stockfish/: mod.rs  stockfish.rs
chess_core/src/types/: bitboard.rs  castling.rs  color.rs  lists.rs  mod.rs  moves.rs  piece.rs  square.rs
chess_core/src/types/board/: applymove.rs  board.rs  internalstate.rs  lookup.rs  mod.rs  movegen.rs  parse_pgn.rs  transposition.rs
clockwork/: Cargo.toml
clockwork/model/model/: helper.py  model.py  train.py
clockwork/model/training/: data.ipynb  train.ipynb
clockwork/src/: lib.rs  main.rs
clockwork/src/api/uci/: uci.rs
clockwork/src/engine/: engine.rs  mod.rs
clockwork/src/engine/evaluation/: evaluator.rs  functions.rs  mod.rs  tables.rs
