[package]
name = "chess_core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2"
num-traits = "0.2.19"
numtraits = "0.0.1"
rand = "0.9.1"
arrayvec = "0.7"
regex = "1.x"
criterion = "0.7.0"

[dev-dependencies]
criterion = "0.7.0"


[build-dependencies]
rand = "0.9.1"

[profile.release]
debug = 1
